<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/user_nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profil"/>
        <item android:id="@+id/user_nav_records"
            android:icon="@drawable/ic_profile"
            android:title="@string/records"/>
        <item android:id="@+id/nav_warrior_tracker"
            android:icon="@drawable/ic_about"
            android:title="@string/warrior_tracker"/>
        <item android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about"/>
        <item android:id="@+id/nav_warr_man"
            android:icon="@drawable/ic_about"
            android:title="@string/manual"/>
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_about"
            android:title="@string/logout"/>

    </group>
</menu>