<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="">

    <group android:checkableBehavior="single">

        <item android:id="@+id/admin_nav_profiles"
            android:icon="@drawable/ic_profile"
            android:title="@string/show_profiles"/>
        <item android:id="@+id/admin_nav_register"
            android:icon="@drawable/ic_profile"
            android:title="@string/register_new_user"/>
        <item android:id="@+id/nav_warrior_tracker"
            android:icon="@drawable/ic_about"
            android:title="@string/warrior_tracker"/>
        <item android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about"/>
        <item android:id="@+id/nav_warr_man"
            android:icon="@drawable/ic_about"
            android:title="@string/manual"/>
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_about"
            android:title="@string/logout"/>

    </group>
</menu>